fix: update html and body styles
- Set `overflow` property on `html` element to `hidden` to hide both horizontal and vertical scrollbars
- Update `body` element to use `overflow-y: auto` to enable vertical scrolling with a thin scrollbar

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -15,12 +15,11 @@
 }
 
 html {
-    overflow-y: hidden;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 body {
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: thin;
   scrollbar-color: var(--color-secondary) var(--color-background);
 }
